Cambio en h2 y centrado en styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h2>Practica</h2>
+    <h2>Design template</h2>
     <header>Header</header>
     <div class="main">
         <article>Article</article>
